--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ test {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '1.5.1'
-    testImplementation("org.junit.platform:junit-platform-runner:1.5.1")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.1")
+    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testImplementation('org.junit.platform:junit-platform-runner:1.6.1')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.1')
 }
 
 compileKotlin {
